Suppressed warnings and deprecation notices for Java
Adds @SuppressedWarning for unchecked generics and removes SBPStruct#parse return from generic to SBPStruct.

Relates to DEVINFRA-479